syntax = "proto3";

option go_package = "./map1";
package map1;


message GetMapWorkReq {
  string MNum=1;
  string paths=2;
}

message GetMapWorkResp {
  string director=1;
}

//service
service MapWork {
  rpc MapWork(GetMapWorkReq) returns (GetMapWorkResp);
}